Made son contrast and align fixes

--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -2,37 +2,20 @@
     
     /*--------------- Main ---------------*/
 
-    /* main {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    } */
 
     main > div {
         margin: 30px;
-        /* border: 1px solid green;
-        background-color: ; */
     }
 
     .hero-container {
-        /* grid-column: 1/4; */
         margin: 0 auto 0 auto;
     }
 
     .intro-section {
-        /* grid-column: 1/4; */
-        /* background-color: green; */
         padding: 30px;
     }
 
-    /* .make-drink {
-        grid-column: 2/3;
-        padding: 40px 0 40px 0;
-        margin: 0;
-        padding: 0;
-    } */
-
     .weather-container {
-        /* grid-column: 1/4; */
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
@@ -40,10 +23,6 @@
     .weather {
         margin: 0 10px 0 10px;
     }
-
-    /* .summary-section {
-        grid-column: 1/4;
-    } */
 
     /*--------------- Fresh Page ---------------*/
 
