--- a/bountiful-foods/styles/medium.css
+++ b/bountiful-foods/styles/medium.css
@@ -29,7 +29,6 @@
 
     nav ul li {
         border: 1px solid #000000;
-        /* padding: 10px 20px 10px 15px; */
         margin: 0 50px 0 50px;
     }
 
@@ -79,13 +78,6 @@
     .intro-section img:nth-child(4) {
         grid-column: 1/2;
         grid-row: 2/3;
-    }
-
-    hr {
-        display: block;
-        grid-column: 1/3;
-        width: 100%;
-        border: 1px solid #000000;
     }
 
     .intro-section img {
@@ -142,7 +134,7 @@
     .summary {
         width: 300px;
         height: 450px;
-        text-align: justify;
+        text-align: left;
         margin: 15px;
         border-radius: 10px;
     }
@@ -150,7 +142,6 @@
     .summary img {
         border: 3px solid #707070;
         border-radius: 8px;
-        /* box-shadow: 0 5px 15px #000000; */
     }
 
     .home-img {
